# quick-launch

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-desktop.yml  ci.yml
docs/: CONTRIBUTING.md
src/: App.tsx  bridge.ts  constants.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_index.rs  app_launcher.rs  autostart.rs  commands.rs  hotkey.rs  key_bindings.rs  lib.rs  main.rs  state.rs  storage.rs  tray.rs
src/__tests__/: constants.test.ts  fuzzy.test.ts  pinyin.test.ts  store.test.ts
src/utils/: fuzzy.ts  pinyin.ts
